2009-04-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSData.h:
	* Source/NSData.m:
	Implement new MacOS-X methods for writing data (no support for
	returning NSError objects yet).

2009-04-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFTPURLHandle.m: Implement full support for multiline
	responses. Fix for bug #26348

2009-04-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSTimeZone.h:
	* Headers/Foundation/NSPropertyList.h:
	* Headers/Foundation/NSZone.h:
	* Source/NSHashTable.m:
	* Source/NSZone.m:
	* Source/NSDecimal.m:
	Fix errors generating documentation.

2009-04-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: ([changeFileAttributes:atPath:]) optimise
	to avoid unnecessary creation of NSNumber objects as suggested by
	Greg.

2009-04-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Reinstate incorrectly reverted changes.
	Fix actual bug in Fred's patched version ... some code incorrectly
	returning an integer when it should return an NSNumber.

2009-04-25 08:35-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSFileManager.m: Partial reversion of previous patch.
	The calls in the method changeAttribues:atPath: to the GSAttrDictionary
	which is used there were erroneously changed to assume an NSNumber.
	This was causing a crash in various applications.

2009-04-24  Fred Morcos <fred.morcos"gmail.com>

	* Headers/Foundation/NSFileManager.h:
	* Source/NSFileManager.m:
	Fix -fileOwnerAccountID and -fileGroupOwnerAccountID to return the
	correct type.  Also fix return type of HFS methods (though these are
	Apple filesystem specific and do nothing in GNUstep).

2009-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHashTable.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSMapTable.m:
	* Source/NSConcreteMapTable.m:
	* Headers/Additions/GNUstepBase/GSIMap.h:
	Changes for GC zeroing weak pointers.  Implement enumeration stuff for